update genre information

--- a/studies/bib/extractions.bib
+++ b/studies/bib/extractions.bib
@@ -20,6 +20,7 @@
   EMOTIONS = {discrete},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {Hindi music, English music (from ISMIR2012, NJU_V1, and Hindi datasets)},
+ STIMULUS_GENRE = {popular, hindi},
   STIMULUS_DURATION = {ISMIR: 30 or 60s, NJU_V1: variable; Hindi music: not specified},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {ISMIR2012: 2886, NJU_V1: 777, Hindi: 1037},
@@ -126,6 +127,7 @@
   EMOTIONS = {discrete},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {Spotify},
+ STIMULUS_GENRE = {multi},
   STIMULUS_DURATION = {150 approx},
   STIMULUS_DURATION_UNIT = {s}, 
   STIMULUS_N = {5192; 12 per user in user validation (not included here due to little information),
@@ -198,6 +200,7 @@ bind_field(
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {MediaEval},
+  STIMULUS_GENRE = {multi (pop of various genres)},
   STIMULUS_DURATION = {45},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {744},
@@ -255,6 +258,7 @@ bind_field(
   EMOTIONS = {quadrants},
   EMOTION_LOCUS = {not specified},
   STIMULUS_TYPE = {EMOPIA; pop piano recordings},
+  STIMULUS_GENRE = {pop piano},
   STIMULUS_DURATION = {30 to 40 s},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N =  {387},
@@ -327,6 +331,7 @@ summarize_matrix
 },
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {pop, disco, soul, rock, jazz, electronic, hip-hop, classical, dance, heavy metal, contemporary, reggae, country, latino, traditional etc.},
+  STIMULUS_GENRE = {multi},
   STIMULUS_DURATION = {30},
   STIMULUS_DURATION_UNIT = {seconds},
   STIMULUS_N = {total: 564; unambiguous: 416, circular validation: 39}, %% full set
@@ -414,6 +419,7 @@ summarize_matrix
   EMOTIONS = { },
   EMOTION_LOCUS = { },
   STIMULUS_TYPE = { },
+  STIMULUS_GENRE = {},
   STIMULUS_DURATION = { },
   STIMULUS_DURATION_UNIT = { },
   STIMULUS_N = { },
@@ -458,6 +464,7 @@ summarize_matrix
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {Turkish traditional music},
+  STIMULUS_GENRE = {turkish traditional},
   STIMULUS_DURATION = {30},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {124},
@@ -515,6 +522,7 @@ summarize_matrix
   EMOTIONS = {happy, sad, calm, angry},
   EMOTION_LOCUS = { },
   STIMULUS_TYPE = { },
+  STIMULUS_GENRE = {},
   STIMULUS_DURATION = {30},
   STIMULUS_DURATION_UNIT = {seconds},
   STIMULUS_N = {1600}, %% each clip segmented into 4 subclips for total of 6400...
@@ -560,6 +568,7 @@ summarize_matrix
   EMOTIONS = {288 emotion labels}, %% used for classification of VA. Presumably quadrant detection
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {pop},
+  STIMULUS_GENRE = {pop},
   STIMULUS_DURATION = {30},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {300},
@@ -627,6 +636,7 @@ summarize_matrix
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {AllMusic},
+  STIMULUS_GENRE = {multi},
   STIMULUS_DURATION = {30},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {900},
@@ -681,6 +691,7 @@ summarize_matrix
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {DEAM},
+  STIMULUS_GENRE = {multi (pop of various genres)},
   STIMULUS_DURATION = {58 full-length and 1744 45-second excerpts},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {1802}, %% report train or test?
@@ -773,6 +784,7 @@ summarize_matrix
   EMOTIONS = {happy, sad, nervous, calm},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {MediaEval},
+  STIMULUS_GENRE = {multi (pop of various genres)},
   STIMULUS_DURATION = {45},
   STIMULUS_DURATION_UNIT =  {s},
   STIMULUS_N = {744},
@@ -828,6 +840,7 @@ bind_field(
   EMOTIONS = {happy, anxious, depressed, relaxed},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {chorus of popular music, chorus of MIREX 2009 collection},
+  STIMULUS_GENRE = {pop},
   STIMULUS_DURATION = {variable},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {429; 350 popular songs + 79 songs from the Beatles (Mirex 2009 collection)},
@@ -889,6 +902,7 @@ bind_field(
   EMOTIONS = {arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {Chinese popular songs},
+  STIMULUS_GENRE = {chinese pop},
   STIMULUS_DURATION = {30},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {171},
@@ -950,6 +964,7 @@ larized Discriminant Analysis (SCRDA)},
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {MediaEval},
+  STIMULUS_GENRE = {multi (pop of various genres)},
   STIMULUS_DURATION = {45},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {744}, %% break into train and test sets?
@@ -1015,6 +1030,7 @@ larized Discriminant Analysis (SCRDA)},
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {prelude},
+  STIMULUS_GENRE = {classical},
   STIMULUS_DURATION = {8},
   STIMULUS_DURATION_UNIT = {measure},
   STIMULUS_N = {336}, %% 48 excerpts times 9 performers
@@ -1061,6 +1077,7 @@ larized Discriminant Analysis (SCRDA)},
   EMOTIONS = {valence, arousal},
 EMOTION_LOCUS = {perceived},
 STIMULUS_TYPE = {stimuli composed in style of popular music; vocal line substituted for utterances},
+  STIMULUS_GENRE = {pop},
 STIMULUS_DURATION = {~30},
 STIMULUS_DURATION_UNIT = {s},
 STIMULUS_N = {study 1: 100; study 2: 20},
@@ -1103,6 +1120,7 @@ FINAL_NOTES = {models differ in number of relevant features.}
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {million songs dataset}, %% blues, classical, country, disco, hiphop, jazz, metal, pop, reggae, rock
+  STIMULUS_GENRE = {multi},
   STIMULUS_DURATION = {not specified},
   STIMULUS_DURATION_UNIT = {not specified},
   STIMULUS_N = {unclear from study}, %% it's called the million songs dataset, but authors say it contains 10 genres x 100 songs? webpage also provides access to random 10,000 subset. unclear what they used
@@ -1149,6 +1167,7 @@ FINAL_NOTES = {models differ in number of relevant features.}
   EMOTIONS = {valence, arousal, 38 mood tags}, %% propose AMG1608 dataset
   EMOTION_LOCUS = {not specified},
   STIMULUS_TYPE = {AMG1608}, %% use AMG1608 data set
+  STIMULUS_GENRE = {pop},
   STIMULUS_DURATION = {30},
   STIMULUS_DURATION_UNIT = {seconds},
   STIMULUS_N = {1838},
@@ -1199,6 +1218,7 @@ FINAL_NOTES = {models differ in number of relevant features.}
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {NTUMIR, MediaEval2013},
+  STIMULUS_GENRE = {pop, multi (pop of various genres)},
   STIMULUS_DURATION = {NTUMIR: 30, MediaEval2013: 45},
   STIMULUS_DURATION_UNIT = {seconds},
   STIMULUS_N = {NTUMIR: 60, MediaEval2013: 744},
@@ -1252,7 +1272,8 @@ bind_field(
   NOTES_TE = {include},
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
-  STIMULUS_TYPE = {MediaEval2014: western pop; MP_db: classical, contemporary western art, baroque, bossa nova, rock, pop, heavy metal, film music},
+  STIMULUS_TYPE = {MediaEval2014 (pre-training): western pop; MP_db (regression): classical, contemporary western art, baroque, bossa nova, rock, pop, heavy metal, film music},
+  STIMULUS_GENRE = {multi},
   STIMULUS_DURATION = {variable},
   STIMULUS_DURATION_UNIT = {seconds},
   STIMULUS_N = {1020; MediaEval2014: 1000: music perception database 1: 6, music perception database 2: 9, music perception database 3: 8, music perception database 4: 7
@@ -1314,7 +1335,8 @@ bind_field(
   NOTES_TE = {include},
   EMOTIONS = {valence, arousal, resonance},
   EMOTION_LOCUS = {perceived},
-  STIMULUS_TYPE = {Western classical},
+  STIMULUS_TYPE = {Western classical}, 
+  STIMULUS_GENRE = {classical},
   STIMULUS_DURATION = {30},
   STIMULUS_DURATION_UNIT = {seconds},
   STIMULUS_N = {275},
@@ -1372,6 +1394,7 @@ bind_field(
   EMOTIONS = {pleasantness, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {piano trio},
+  STIMULUS_GENRE = {classical},
   STIMULUS_DURATION = {6},
   STIMULUS_DURATION_UNIT = {seconds},
   STIMULUS_N = {84},
@@ -1441,6 +1464,7 @@ bind_field(
   EMOTIONS = {arousal, valence},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {classical, jazz, blues, country, disco, hip-hop, metal, pop, reggae, rock},
+  STIMULUS_GENRE = {multi},
   STIMULUS_DURATION = {6},
   STIMULUS_DURATION_UNIT = {seconds},
   STIMULUS_N = {324},
@@ -1500,6 +1524,7 @@ bind_field(
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {classical, jazz, blues, country, disco, hip-hop, metal, pop, reggae, rock}, %% training data: GTZAN
+  STIMULUS_GENRE = {multi},
   STIMULUS_DURATION = {6},
   STIMULUS_DURATION_UNIT = {seconds},
   STIMULUS_N = {324},
@@ -1574,6 +1599,7 @@ MODEL_RATE_EMOTION_VALUES = {bind_field(
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {20 songs of different genres},
+  STIMULUS_GENRE = {multi},
   STIMULUS_DURATION = {variable},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {study 1: 20; study 2: 40)}, % three outliers
@@ -1623,6 +1649,7 @@ various.mlr.mixed.new.validation = c(arousal_r2.r2 = 0.708, arousal_sse.sse = 29
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {MER60, CH818, AMG1608},
+  STIMULUS_GENRE = {western pop, chinese pop},
   STIMULUS_DURATION = {MER60 = 30, CH818 = 30, AMG1608 = 60},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {MER60: 60, CH818: 818, AMG1608: 1608},
@@ -1687,6 +1714,7 @@ exp5: train = selected sets (varied), test = selected sets (varied), factor exam
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {MIREX Grand Challenge on User Experience (Jamendo)}, 
+  STIMULUS_GENRE = {multi},
   STIMULUS_DURATION = {not specified}, %% full tracks possibly, average playtime 50s
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {956},
@@ -1737,6 +1765,7 @@ exp5: train = selected sets (varied), test = selected sets (varied), factor exam
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {Free Music Archive},
+  STIMULUS_GENRE = {multi (popular songs of different genres)},
   STIMULUS_DURATION = {full},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {54},
@@ -1786,6 +1815,7 @@ exp5: train = selected sets (varied), test = selected sets (varied), factor exam
   EMOTIONS = { },
   EMOTION_LOCUS = { },
   STIMULUS_TYPE = { },
+  STIMULUS_GENRE = {},
   STIMULUS_DURATION = { },
   STIMULUS_DURATION_UNIT = { },
   STIMULUS_N = { },
@@ -1831,6 +1861,7 @@ exp5: train = selected sets (varied), test = selected sets (varied), factor exam
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {MediaEval},
+  STIMULUS_GENRE = {multi (pop of various genres)},
   STIMULUS_DURATION = {45},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {744},
@@ -1885,6 +1916,7 @@ exp5: train = selected sets (varied), test = selected sets (varied), factor exam
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {MediaEval},
+  STIMULUS_GENRE = {multi (pop of various genres)},
   STIMULUS_DURATION = {45},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {1802},
@@ -1931,6 +1963,7 @@ exp5: train = selected sets (varied), test = selected sets (varied), factor exam
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {DEAM}, %% use DEAM dataset
+  STIMULUS_GENRE = {multi (pop of various genres)},
   STIMULUS_DURATION = {45},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {431}, %% subset of DEAM
@@ -1982,6 +2015,7 @@ time-distributed-layer: CNN, iterative reconstruction, bidirectional gated recur
   EMOTIONS = { },
   EMOTION_LOCUS = { },
   STIMULUS_TYPE = { },
+  STIMULUS_GENRE = {},
   STIMULUS_DURATION = { },
   STIMULUS_DURATION_UNIT = { },
   STIMULUS_N = { },
@@ -2028,6 +2062,7 @@ time-distributed-layer: CNN, iterative reconstruction, bidirectional gated recur
   EMOTIONS = {activation, valence},
   EMOTION_LOCUS = {not specified},
   STIMULUS_TYPE = {piano pieces, classical music}, %% piano works from vieillard et al. (2008)
+  STIMULUS_GENRE = {classical},
   STIMULUS_DURATION = {8-12},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {40},
@@ -2073,6 +2108,7 @@ time-distributed-layer: CNN, iterative reconstruction, bidirectional gated recur
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {classical},
+  STIMULUS_GENRE = {classical},
   STIMULUS_DURATION = {120},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {12},
@@ -2121,6 +2157,7 @@ time-distributed-layer: CNN, iterative reconstruction, bidirectional gated recur
   EMOTIONS = {valence, tension arousal, energy arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {chinese, western classical music},
+  STIMULUS_GENRE = {chinese, western classical},
   STIMULUS_DURATION = {not specified},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {48}, %% 2 melodies * 4 quadrants * 6 timbres
@@ -2176,6 +2213,7 @@ time-distributed-layer: CNN, iterative reconstruction, bidirectional gated recur
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {emoMusic, Soundtracks, Chinese Classical Music Dataset},
+  STIMULUS_GENRE = {chinese, western pop},
   STIMULUS_DURATION = {emoMusic: 45; soundtracks: 10-30; chinese: 30}, %% ~30 seconds for Chinese Classical dataset, 10-30 for Soundtracks, ~45 for emoMusic
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {emoMusic: 744, soundtracks: 360, chinese: 500}, %% emoMusic contains full 1000? 
@@ -2230,6 +2268,7 @@ time-distributed-layer: CNN, iterative reconstruction, bidirectional gated recur
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {chinese solo, chinese ensemble, western solo, western ensemble,
   Chinese classical dataset, MediaEval, Emotify, AMG1608}, %% stimuli sampled from other data sets
+  STIMULUS_GENRE = {multi},
   STIMULUS_DURATION = {10-15},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {146}, %% 515 before reliability test 
@@ -2281,6 +2320,7 @@ time-distributed-layer: CNN, iterative reconstruction, bidirectional gated recur
   EMOTIONS = {},
   EMOTION_LOCUS = { },
   STIMULUS_TYPE = {},
+  STIMULUS_GENRE = {},
   STIMULUS_DURATION = { },
   STIMULUS_DURATION_UNIT = { },
   STIMULUS_N = { },
@@ -2324,6 +2364,7 @@ time-distributed-layer: CNN, iterative reconstruction, bidirectional gated recur
   EMOTIONS = {arousal, valence},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {1000 songs dataset},
+  STIMULUS_GENRE = {multi (pop of different genres)},
   STIMULUS_DURATION = {45},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {744}, 
@@ -2376,6 +2417,7 @@ time-distributed-layer: CNN, iterative reconstruction, bidirectional gated recur
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS =  {perceived},
   STIMULUS_TYPE = {Chinese pop songs from PSIC3839},
+  STIMULUS_GENRE = {chinese pop},
   STIMULUS_DURATION = {not specified (presumably full)},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {2372 (subset of PSIC3839, total n: 3839)},  
@@ -2421,7 +2463,8 @@ time-distributed-layer: CNN, iterative reconstruction, bidirectional gated recur
   NOTES_TE = {include, classification},
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
-  STIMULUS_TYPE = {Chinese popular music from Zhang et al. (2015) },
+  STIMULUS_TYPE = {Chinese popular music from Zhang et al. (2015)},
+  STIMULUS_GENRE = {chinese pop},
   STIMULUS_DURATION = {30},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {171},
@@ -2481,6 +2524,7 @@ Discriminant Analysis (RDA).},
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE = {Chinese folk music. Adopted from Xing et al. (2015)},
+  STIMULUS_GENRE = {chinese folk},
   STIMULUS_DURATION = {10},
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {420}, %% cite Xing et al. (2015). Stimuli divided into 21 groups each with 20 stimuli (five per quadrant). Each participant listened to 3 groups
@@ -2505,7 +2549,6 @@ Discriminant Analysis (RDA).},
   FINAL_NOTES = {}
 }
 
-
 @Article{zhang2023mo,
   AUTHOR = {Zhang, Meixian and Zhu, Yonghua and Zhang, Wenjun and Zhu, Yunwen and Feng, Tianyu},
   JOURNAL = {MULTIMEDIA TOOLS AND APPLICATIONS},
@@ -2529,7 +2572,8 @@ Discriminant Analysis (RDA).},
   EMOTIONS = {valence, arousal},
   EMOTION_LOCUS = {perceived},
   STIMULUS_TYPE =  {PMEmo, DEAM}, %% PMEmo: new, DEAM: benchmark
-  STIMULUS_DURATION = {DEAM: 45, PMEmo: variable}, %% PMEmo has 794. Rest removed due to insufficieent annotation #
+  STIMULUS_GENRE = {pop, multi (pop of various genres)},
+  STIMULUS_DURATION = {DEAM: 45, PMEmo: variable}, %% PMEmo has 794. Rest removed due to insufficieent annotation 
   STIMULUS_DURATION_UNIT = {s},
   STIMULUS_N = {DEAM: 744, PMEmo: 206},
   FEATURE_N = { }, %% how to report
@@ -2558,7 +2602,6 @@ alpha = 0.18, beta = 0.49},
   FINAL_NOTES = {}
 }
 
-
 @Article{zhang2024ap,
   AUTHOR = {Zhang, Yao and Cai, Delin and Zhang, Dongmei},
   JOURNAL = {Environment and Social Psychology}, %% dubious journal??
@@ -2572,7 +2615,7 @@ alpha = 0.18, beta = 0.49},
   ABSTRACT = {In the current research, we integrate distinct learning modalities—Curriculum Learning (CL) and Reinforcement Learning (RL)—in an attempt to develop and optimize Music Emotion Recognition (MER) in piano performance. Classical approaches have never been successful when applied in the field of determining the degree of emotion in the music of the piano, owing to the substantial complexity required. Addressing this particular issue is the primary motivation for the present endeavour. In an approach that’s comparable to how human beings acquire information, it trains the RL agent CL in phases; such an approach improves the student’s learning model in understanding the diverse emotions expressed by musical compositions. A higher rating of performance can be achieved after learning the model to recognize emotions more effectively and precisely. A set of piano melodies with emotional content notes has been included in the EMOPIA repository for use when conducting the process of evaluation. In order to benchmark the proposed approach with different models, parameters including R2, Mean Absolute Error (MAE), and Root Mean Square Error (RMSE) were deployed. Studies indicate that the recommended approach accurately recognizes the emotions expressed by piano-playing music. In challenging tasks like MER, the significance of implementing the CL paradigm with the RL has been emphasized using the outcomes mentioned earlier. © 2024 by author(s).},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85184876855&doi = 10.54517},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85184876855},
   AUTHOR_KEYWORDS = {Curriculum Learning; Machine Learning; MBE; Music Emotion Recognition; piano music; Reinforcement Learning; RMSE},
   PARADIGM = {regression},
   NOTES_CA = {include},
@@ -2580,6 +2623,7 @@ alpha = 0.18, beta = 0.49},
   EMOTIONS = { },
   EMOTION_LOCUS = { },
   STIMULUS_TYPE = { },
+  STIMULUS_GENRE = { },
   STIMULUS_DURATION = { },
   STIMULUS_DURATION_UNIT = { },
   STIMULUS_N = { },
@@ -2600,4 +2644,47 @@ alpha = 0.18, beta = 0.49},
   MODEL_RATE_EMOTION_VALUES = { },
   MODEL_VALIDATION = { },
   FINAL_NOTES = {dubious !EXCL!}  %% dubious journal??
+}
+@Article{citekey,
+  AUTHOR = { },
+  JOURNAL = { }, 
+  NOTE = { },
+  NUMBER = { },
+  TITLE = { },
+  TYPE = { },
+  VOLUME = { },
+  YEAR = { },
+  DOI = { },
+  ABSTRACT = { },
+  PUBLICATION_STAGE = { },
+  SOURCE = { },
+  URL = { },
+  AUTHOR_KEYWORDS = { },
+  PARADIGM = { },
+  NOTES_CA = { },
+  NOTES_TE = { },
+  EMOTIONS = { },
+  EMOTION_LOCUS = { },
+  STIMULUS_TYPE = { },
+  STIMULUS_GENRE = { },
+  STIMULUS_DURATION = { },
+  STIMULUS_DURATION_UNIT = { },
+  STIMULUS_N = { },
+  FEATURE_N = { },
+  PARTICIPANT_N = { },
+  PARTICIPANT_EXPERTISE = { },
+  PARTICIPANT_ORIGIN = { },
+  PARTICIPANT_SAMPLING = { },
+  PARTICIPANT_TASK = { },
+  FEATURE_CATEGORIES = { },
+  FEATURE_SOURCE = { },
+  FEATURE_REDUCTION_METHOD = { },
+  MODEL_CATEGORY = { },
+  MODEL_DETAIL = { },
+  MODEL_MEASURE = { },
+  MODEL_COMPLEXITY_PARAMETERS = { },
+  MODEL_RATE_EMOTION_NAMES = { },
+  MODEL_RATE_EMOTION_VALUES = { },
+  MODEL_VALIDATION = { },
+  FINAL_NOTES = { } 
 }
